<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name_ip">Input Distribution</string>
    <string name="search_hint">Tap here to search</string>
    <string name="cart">Cart</string>
    <string name="farmer_img">show farmer image here</string>
    <string name="farmer_id">UCL–749–482</string>
    <string name="farmer_name">Julius Narh</string>
    <string name="farmer_coupons">Farmer coupons</string>
    <string name="fert">Fertilizers</string>
    <string name="seeds">Seeds</string>
    <string name="pest">Pesticides</string>
    <string name="insecticides">Insecticides</string>
    <string name="mech_tools">Mechanical Tools</string>
    <string name="services">Services</string>
    <string name="fugar">Fugar</string>
    <string name="add_service">Add Service</string>
    <string name="add_input">Add Input</string>
    <string name="price_item">GHS %.2f</string>
    <string name="expected">%.2f bag(s)</string>
    <string name="weight">%.2f kg</string>
    <string name="weight2">%f kg</string>
    <string name="acre">%1$s acre(s)</string>
    <string name="price_quantity">GHS %1$d   x%2$d</string>
    <string name="price">%.2f</string>
    <string name="farm_count">%d</string>
    <string name="pricealt">GHS %1$s x%2$s</string>
    <string name="sms_info">Charges apply when sending sms to aggregators. please make sure you have enough credit to send messages</string>
    <string name="numberselected">%d Farmer(s) Selected</string>
    <string name="preview">%1$s \n%2$s \t\t x%3$s</string>
    <string name="cartitem">%s items in cart</string>
    <string name="new_input">Add new input</string>
    <string name="next">Next</string>
    <string name="negative">Cancel</string>
    <string name="almost_done">Almost through</string>
    <string name="complete">Complete</string>
    <string name="weed">Weedicide</string>
    <string name="title">Choose Action</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string-array name="payment_method">
        <item>Cash</item>
        <item>Mobile Money</item>
        <item>Barter</item>
    </string-array>
    <string name="temp_order">%1$s (%2$s)</string>
    <string name="temp_quantity">x%1$s</string>
    <string name="actual_order">%1$s\n%2$s</string>
    <string name="actual_quantity">%1$s\n%2$s</string>
    <string name="no_item_in_cart">No item in cart</string>
    <string name="please_wait">Please wait</string>
    <string name="adding_item">Adding item to cart</string>
    <string name="inputTransaction">Transaction</string>
    <string-array name="payment_style">
        <item>Postpaid</item>
        <item>Credit</item>
    </string-array>
    <string name="empty2">0.00</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="mm">Received %1$s from %2$s. Transaction ID: %3$s</string>
    <string-array name="categories">
        <item>Seed</item>
        <item>Fertilizer</item>
        <item>Weedicide</item>
        <item>Insecticide</item>
        <item>Pesticide</item>
        <item>Fugar</item>
        <item>Herbicide</item>
        <item>Mechanical Tool</item>
        <item>Services</item>
    </string-array>
    <string-array name="aid">
        <item>MOFA</item>
        <item>Yara Ghana Limited</item>
        <item>UCL GH</item>
        <item>UCL USA</item>
        <item>UCL MANA</item>
        <item>UCL ACCRA</item>
    </string-array>
    <string-array name="servicetype">
        <item>Shredding</item>
        <item>Bagging</item>
        <item>Scaling</item>
        <item>Storage</item>
        <item>Land Preparation</item>
        <item>Fumigation</item>
        <item>Seed Planting</item>
    </string-array>
    <string name="templates">TEMPLATES</string>
    <string-array name="services_list">
        <item>Add item to cart</item>
        <item>Edit</item>
    </string-array>
    <string-array name="item_list">
        <item>Add item to cart</item>
    </string-array>
    <string-array name="serviceprovider">
        <item>MOFA</item>
        <item>Yara Ghana Limited</item>
        <item>UCL GH</item>
        <item>UCL USA</item>
        <item>UCL MANA</item>
        <item>UCL ACCRA</item>
    </string-array>
    <string-array name="land_glyph">
        <item>Landlord</item>
        <item>Glyphosphate</item>
    </string-array>
    <string-array name="packages">
        <item>Government Standard Package</item>
        <item>RMG-Ransboat Package</item>
    </string-array>
    <string-array name="subsidized">
        <item>Subsidized</item>
        <item>Non-Subsidized</item>
    </string-array>
    <string-array name="payment_style_alt">
        <item>Credit</item>
    </string-array>
    <string-array name="recov">
        <item>Make Purchase</item>
        <item>Recovery</item>
    </string-array>
    <string-array name="scaletran">
        <item>Recovery Transactions</item>
        <item>Purchase Transactions</item>
    </string-array>
    <string name="has_coupon">Does %1$s have a coupon?</string>
    <string name="summary">Activity Summary</string>
    <string name="Description_farmer_image">farmer Image</string>
    <string name="order_detail">Farmer Details (x50)</string>
    <string name="actual_order_detail">%1$s (x%2$s)</string>
    <string name="actual_order_detail_coupon">%1$s \tx%2$s%3$s</string>
    <string name="xquantity">x%1$d</string>
    <string name="for_coupon">%1$s:%2$s</string>
    <string name="geocoord">%1$s - %2$s, %3$s, %4$s</string>
    <string name="my_cart">My Cart</string>
    <string name="almost_there">Almost there</string>
    <string name="order_modify_btn">Modify</string>
    <string name="order_remove_btn">Remove</string>
    <string name="order_category">Input Category</string>
    <string name="checkout">checkout</string>
    <string name="edit_quantity">Change Quantity</string>
    <string name="update_order">Updating orderCart...</string>
    <string name="delete">Delete</string>
    <string name="farmer_consent">I Julius Narh agree to exchange 14bags of produce as payment for the purchase of GHS 555.00 worth of goods and services by 13/05/2018</string>
    <string name="barter">Barter Agreement</string>
    <string name="agree">Agree</string>
    <string name="recovery">recovery transactions</string>
    <string name="purchase">purchase transactions</string>
    <string name="view_declaration">View Debtor\'s date_created</string>
    <string name="date">22/10/2019</string>
    <string name="payment">Payment</string>
    <string name="debt_payment">Agreed Items: %1$s bag(s).\nPlease enter payment below.</string>
    <string name="no_debtor_record">No debtor record available</string>
    <string name="redeem">redeem coupon</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Please enter item quantity</string>
    <string name="enter_amount">Amount payable: %1$.2f.\nPlease enter amount</string>
    <string name="snuffoo">Consider selecting payment by credit</string>
    <string name="sms_debtor_update">
        Dear %1$s, you have redeemed %2$d bag(s) of %3$d bag(s)
        owing as payment for Transaction ID: %4$s purchased on %5$s.
    </string>
    <string name="sms_debtor_paid">
        Dear %1$s, you have made full payment of %2$d bag(s)
        as payment for Transaction ID: %3$s purchased on %4$s.
    </string>
    <string name="sms_transaction_credit">
        Dear %1$s you have made a total Transaction of GHS %2$.2f for the purchase of
        %3$s. Purchase made on credit by Barter.\nTransaction ID: %4$s.
    </string>
    <string name="sms_trans">
        Dear %1$s you have made a total Transaction of GHS %2$.2f for the purchase of
        %3$s. Purchase made by %4$s.\nTransaction ID: %5$s.
    </string>
    <string name="sms_declaration">
        I %1$s agree to exchange %2$s (50kg) bag(s) of produce as payment for the purchase of
        GHS %3$.2f worth of inputs and services to be paid by %4$s.
    </string>
    <string name="sms_declaration_alt">
        I %1$s agree to exchange %2$s (50kg) bag(s) of produce as payment for the purchase of
        GHS %3$.2f worth of inputs and services covering %4$s acre(s).
    </string>
    <string name="file_provider_authority" translatable="false">com.quiro.fileproviderexample.fileprovider</string>
    <string name="app_name">Agric Management System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In orderCart to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="empty" />
    <string name="telephone">TELEPHONE</string>
    <string name="title_activity_continue_registration">continue_registration</string>
    <string name="farming_commnunity">FARMING COMMUNITY</string>
    <string name="district">DISTRICT</string>
    <string name="region">REGION</string>
    <string name="powered">Powered by</string>
    <string name="farmer">Farmers</string>
    <string name="lbc">LBCs</string>
    <string name="buying_centers">Buying Centres</string>
    <string name="accredited">Accredited Input Dealers</string>
    <string name="purchasing">Purchasing Clerks</string>
    <string name="cocoa_purchase">Cocoa Purchase</string>
    <string name="input_distribution">Input Distribution</string>
    <string name="logout">Logout</string>
    <string name="location">LOCATION</string>
    <string name="cms">AMS</string>
    <string name="mes">( Agric Management System )</string>
    <string name="company_id">COMPANY ID</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="address">ADDRESS</string>
    <string name="a">a</string>
    <string name="settings">Settings</string>
    <string name="readcsv">Populate Database</string>
    <string name="sync">Sync</string>
    <string name="agent">Agent</string>
    <string name="farmeroptions">What do you want to do with %s?</string>
    <string name="purchases">purchases</string>
    <string name="view_profile">view profile</string>
    <string name="input_recovery">input recovery</string>
    <string name="extension_services">Extension Services</string>
    <string name="view_all_transactions">View all transactions</string>
    <string name="assign_to_aggregator_fbo">Assign to Aggregator/FBO</string>
</resources>