<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/farmer"
            android:icon="@drawable/ic_action_user"
            android:title="@string/farmer" />
        <item
            android:id="@+id/agent"
            android:icon="@drawable/ic_action_user"
            android:title="@string/agent" />
        <item
            android:id="@+id/lbc"
            android:icon="@drawable/ic_action_lbc"
            android:title="@string/lbc" />
        <item
            android:id="@+id/buying_center"
            android:icon="@drawable/ic_action_buying"
            android:title="@string/buying_centers" />
        <item
            android:id="@+id/accredited"
            android:icon="@drawable/ic_action_accredited"
            android:title="@string/accredited" />
        <item
            android:id="@+id/purching"
            android:icon="@drawable/ic_action_purchasing"
            android:title="@string/purchasing" />
        <item
            android:id="@+id/cocoa_purchase"
            android:icon="@drawable/ic_action_cocoa_purchase"
            android:title="@string/cocoa_purchase" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/readcsv"
            android:icon="@drawable/ic_settings"
            android:title="@string/readcsv" />
        <item
            android:id="@+id/sync"
            android:icon="@drawable/sync"
            android:title="@string/sync"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/logout" />

    </group>

</menu>
