<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/farmer_bs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_bottomsheet_farmer"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <View
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_strip"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="7dp"
            android:text="@string/farmeroptions"
            android:textSize="@dimen/text_size_bsmall" />


        <LinearLayout
            android:id="@+id/extservices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/services"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/purchases"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/view_profile"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/input_recovery"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/distribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="7dp"
                android:text="@string/input_distribution"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/farmassessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/extension_services"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alltransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/view_all_transactions"
                android:textAllCaps="true"
                android:textColor="@color/accent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/assign_to_aggregator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/assign_to_aggregator_fbo"
                android:textAllCaps="true"
                android:textColor="@color/accent"/>
        </LinearLayout>


    </LinearLayout>
</layout>